@@ -1,5 +1,6 @@
 2006-09-11  Pierre Chifflier  <pollux@cpe.fr>
 	* feature: enhance libwzd: better error handling, inline documentation
+	* bugfix: read/write group permissions in backend plaintext
 
 2006-09-07  Pierre Chifflier  <pollux@cpe.fr>
 
